fix z-index

--- a/widget-script/src/styles/styles.scss
+++ b/widget-script/src/styles/styles.scss
@@ -97,7 +97,7 @@ $f_radius: units(1);
   transform: translate(40%, -30%);
   cursor: pointer;
   transition: 0.2s ease;
-  display: block;
+  display: block !important;
 
   &:before,
   &:after {
